--- a/5.4/src/ansible/provision.yml
+++ b/5.4/src/ansible/provision.yml
@@ -43,21 +43,21 @@
           name: docker
           state: started
           enabled: yes
-
-      - name: Install docker-compose
-        raw: $(curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-`uname -s`-`uname -m` -o /usr/bin/docker-compose && chmod +x /usr/bin/docker-compose)
-
-      - name: Synchronization
-        copy:
-          src: stack/
-          dest: "/opt/stack/"
-          owner: root
-          group: root
-          mode: 0644
-        become: true
-
-      - name: Pull all images in compose
-        command: docker-compose -f /opt/stack/docker-compose.yaml pull
-
-      - name: Up all services in compose
-        command: docker-compose -f /opt/stack/docker-compose.yaml up -d
+#
+#      - name: Install docker-compose
+#        raw: $(curl -L https://github.com/docker/compose/releases/download/1.29.2/docker-compose-`uname -s`-`uname -m` -o /usr/bin/docker-compose && chmod +x /usr/bin/docker-compose)
+#
+#      - name: Synchronization
+#        copy:
+#          src: stack/
+#          dest: "/opt/stack/"
+#          owner: root
+#          group: root
+#          mode: 0644
+#        become: true
+#
+#      - name: Pull all images in compose
+#        command: docker-compose -f /opt/stack/docker-compose.yaml pull
+#
+#      - name: Up all services in compose
+#        command: docker-compose -f /opt/stack/docker-compose.yaml up -d
