--- a/6.5/elasticsearch.yml
+++ b/6.5/elasticsearch.yml
@@ -20,7 +20,7 @@
 #
 # Use a descriptive name for the node:
 #
-#node.name: node-1
+node.name: netology_test
 #
 # Add custom attributes to the node:
 #
@@ -30,11 +30,13 @@
 #
 # Path to directory where to store the data (separate multiple locations by comma):
 #
-#path.data: /path/to/data
+path.data: /var/lib
 #
 # Path to log files:
 #
 #path.logs: /path/to/logs
+
+path.repo: [ "snapshot" ]
 #
 # ----------------------------------- Memory -----------------------------------
 #
@@ -67,12 +69,13 @@ http.port: 9200
 # Pass an initial list of hosts to perform discovery when this node is started:
 # The default list of hosts is ["127.0.0.1", "[::1]"]
 #
-#discovery.seed_hosts: ["host1", "host2"]
+discovery.seed_hosts: ["127.0.0.1"]
 #
 # Bootstrap the cluster using an initial set of master-eligible nodes:
 #
-#cluster.initial_master_nodes: ["node-1", "node-2"]
-#
+cluster.initial_master_nodes: ["netology_test"]
+
+#discovery.type: single-node
 # For more information, consult the discovery and cluster formation module documentation.
 #
 # ---------------------------------- Various -----------------------------------
