--- a/10.4/configs/logstash.conf
+++ b/10.4/configs/logstash.conf
@@ -1,18 +1,20 @@
 input {
-  tcp {
+  beats {
     port => 5046
     codec => json
   }
 }
 
 filter {
-  json {}
+  json {
+    source => "message"
+  }
 }
 
 output {
   elasticsearch { 
     hosts => ["es-hot:9200"] 
-    index => "logstash-%{[@metadata][indexDate]}"
+    index => "logstash-%{[@metadata][indexdate]}"
   }
   stdout { codec => rubydebug }
 }
