--- a/10.4/docker-compose.yml
+++ b/10.4/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.2'
 services:
 
   es-hot:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
+    image: elasticsearch:7.16.2
     container_name: es-hot
     environment:
       - node.name=es-hot
@@ -28,7 +28,7 @@ services:
       - es-warm
 
   es-warm:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.11.0
+    image: elasticsearch:7.16.2
     container_name: es-warm
     environment:
       - node.name=es-warm
@@ -50,7 +50,7 @@ services:
       - elastic
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.11.0
+    image: kibana:7.16.2
     container_name: kibana
     ports:
       - 5601:5601
@@ -64,13 +64,13 @@ services:
       - es-warm
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:6.3.2
+    image: logstash:7.16.2
     container_name: logstash
     ports:
       - 5046:5046
     volumes:
-      - ./configs/logstash.conf:/etc/logstash/conf.d/logstash.conf:Z
-      - ./configs/logstash.yml:/opt/logstash/config/logstash.yml:Z
+      - ./configs/logstash.conf:/usr/share/logstash/pipeline/logstash.conf:Z
+      - ./configs/logstash.yml:/usr/share/logstash/config/logstash.yml:Z
     networks:
       - elastic
     depends_on:
@@ -78,10 +78,12 @@ services:
       - es-warm
 
   filebeat:
-    image: "docker.elastic.co/beats/filebeat:7.2.0"
+    image: "docker.elastic.co/beats/filebeat:7.16.2"
     container_name: filebeat
     privileged: true
     user: root
+    networks:
+      - elastic
     volumes:
       - ./configs/filebeat.yml:/usr/share/filebeat/filebeat.yml:Z
       - /var/lib/docker:/var/lib/docker:Z
@@ -92,9 +94,12 @@ services:
   some_application:
     image: library/python:3.9-alpine
     container_name: some_app
+    networks:
+      - elastic
     volumes:
       - ./pinger/run.py:/opt/run.py:Z
     entrypoint: python3 /opt/run.py
+
 
 volumes:
   data01:
